03-dates completed. age-by-selection was the most difficult by far, I haven't figured out the negative days calculation yet

--- a/03-dates/03-age-by-select/index.html
+++ b/03-dates/03-age-by-select/index.html
@@ -135,6 +135,11 @@
                             <button type="button" id="run">Run the script</button>
                         </div>
                     </form>
+<!-- displays on click -->
+                    <h1 id="out"></h1>
+
+
+
                 </section>      </div>
         </div>
 
