I thought defining the input values would work at the top of the function, but that returns NaN

--- a/04-maths/01-calculator-one/index.html
+++ b/04-maths/01-calculator-one/index.html
@@ -37,7 +37,10 @@
                             <button type="button" id="division">÷</button>
                         </div>
                     </form>
+                    <h1 id="result">answer:</h1>
+
                 </section>
+
             </div>
         </div>
 
