placed 'fizzbuzz' as an else if, fixed now

--- a/04-maths/02-calculator-two/index.html
+++ b/04-maths/02-calculator-two/index.html
@@ -37,6 +37,7 @@
                             <button type="button" class="operator" id="division">÷</button>
                         </div>
                     </form>
+                    <h1 id="result">answer:</h1>
                 </section>
             </div>
         </div>
