04-04 even square (square numbers) completed

--- a/04-maths/04-even-square-Optional/index.html
+++ b/04-maths/04-even-square-Optional/index.html
@@ -24,6 +24,8 @@
                     <div class="actions">
                         <button type="button" id="run">run the script</button>
                     </div>
+                    <ul id="list-me">
+                    </ul>
                 </section>
             </div>
         </div>
